adjusted deletesnippet